# IGE

./: Cargo.toml  plissken.toml  pyproject.toml
.github/workflows/: docs.yml  wheels.yml
crates/ige-c/: Cargo.toml  ige.h
crates/ige-c/src/: lib.rs
crates/ige-core/: Cargo.toml
crates/ige-core/benches/: ler_axis_aligned_bench.rs  lir_approximate_oriented_bench.rs  lir_axis_aligned_bench.rs  lir_oriented_bench.rs  mic.rs  mic_bench.rs  real_world.rs  real_world_bench.rs
crates/ige-core/demos/: run_all.rs  visualize.rs
crates/ige-core/demos/visualize_modules/: cli.rs  io.rs  mod.rs  render.rs  shapes.rs  stats.rs
crates/ige-core/examples/: generate_line_features.rs  generate_polygon_features.rs  generate_real_lines.rs  generate_real_polygons.rs  visualize.rs
crates/ige-core/src/: lib.rs  prelude.rs  tuning.rs
crates/ige-core/src/algorithms/: mod.rs
crates/ige-core/src/axis_aligned/: bcrs_grid.rs  sdf.rs  vertex_grid.rs
crates/ige-core/src/bcrs/: candidates.rs  expand.rs  fast.rs  grid.rs  histogram.rs  mod.rs  parallel.rs  polish.rs  refine.rs  sdf.rs
crates/ige-core/src/cpu/: mod.rs  vertex_grid.rs
crates/ige-core/src/geometry/: mod.rs
crates/ige-core/src/gpu/: mod.rs
crates/ige-core/src/gpu/shaders/: bcrs_grid_batch.wgsl  bcrs_sdf.wgsl  lir_grid_batch.wgsl  lir_sdf.wgsl  oriented_lir.wgsl
crates/ige-core/src/lir_approximate_oriented/: candidates.rs  certify.rs  expand.rs  fallback.rs  fast.rs  parallel.rs  polish.rs  refine.rs
crates/ige-core/src/lir_axis_aligned/: bcrs_grid.rs  exact.rs  histogram.rs  mod.rs  vertex_grid.rs
crates/ige-core/src/mic/index/: nearest_boundary.rs
crates/ige-core/src/mic/solver/: exact.rs
crates/ige-core/src/shared/: mod.rs
crates/ige-core/src/solvers/: mod.rs
crates/ige-core/src/solvers/ler/: axis_aligned.rs  mod.rs
crates/ige-core/src/solvers/ler/axis_aligned/: line.rs  mod.rs  point.rs  point_dc.rs  point_sweep.rs  rect.rs
crates/ige-core/src/solvers/lir/: mod.rs
crates/ige-core/src/solvers/lir/approximate/: candidates.rs  certify.rs  expand.rs  fallback.rs  fast.rs  mod.rs  parallel.rs  polish.rs  prepare.rs  refine.rs
crates/ige-core/src/solvers/lir/axis_aligned/: containment.rs  exact.rs  grid.rs  histogram.rs  mod.rs  sdf.rs  vertex_grid.rs
crates/ige-core/src/solvers/lir/oriented/: candidates.rs  certify.rs  edge_anchor.rs  expand.rs  fast.rs  mod.rs  parallel.rs  prepare.rs
crates/ige-core/src/solvers/mic/: certify.rs  input.rs  mod.rs  workspace.rs
crates/ige-core/src/solvers/mic/index/: mod.rs  nearest_boundary.rs  pip.rs
crates/ige-core/src/solvers/mic/solver/: exact.rs  geos_fallback.rs  grid.rs  mod.rs
crates/ige-core/tests/: ler_line_obstacles_tests.rs  lir_approximate_oriented_tests.rs  lir_axis_aligned_tests.rs  mic_geos_comparison_tests.rs  mic_tests.rs  real_world_tests.rs
crates/ige-core/tests/real_world_data/: realworld_290.geojson
crates/ige-geo-input/: Cargo.toml
crates/ige-geo-input/src/: error.rs  geojson_parser.rs  lib.rs
crates/ige-py/: Cargo.toml  README.md  pyproject.toml
crates/ige-py/src/: lib.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  index.md
docs/book/src/algorithms/: axis-aligned-lir.md  index.md  mic.md  oriented-lir.md
docs/book/src/api/: SUMMARY.md  book.toml
docs/book/src/api/src/: SUMMARY.md  ige.md
docs/book/src/api/src/rust/: ige-core.md
docs/book/src/api/src/rust/ige-core/: algorithms.md  gpu.md  prelude.md  shared.md  solvers.md  tuning.md
docs/book/src/api/src/rust/ige-core/solvers/: ler.md  ler_lir.md  lir.md  mic.md  nesting.md  obb.md
docs/book/src/api/src/rust/ige-core/solvers/ler/: axis_aligned.md  oriented.md
docs/book/src/api/src/rust/ige-core/solvers/ler_lir/: combined.md
docs/book/src/api/src/rust/ige-core/solvers/lir/: axis_aligned.md  oriented.md
docs/book/src/api/src/rust/ige-core/solvers/lir/axis_aligned/: containment.md  exact.md  grid.md  histogram.md  sdf.md  vertex_grid.md
docs/book/src/api/src/rust/ige-core/solvers/lir/oriented/: candidates.md  certify.md  edge_anchor.md  expand.md  fast.md  parallel.md  prepare.md
docs/book/src/api/src/rust/ige-core/solvers/mic/: index.md  input.md  solver.md  workspace.md
docs/book/src/api/src/rust/ige-core/solvers/mic/index/: nearest_boundary.md  pip.md
docs/book/src/api/src/rust/ige-core/solvers/mic/solver/: exact.md  geos_fallback.md
docs/book/src/api/src/rust/ige-core/solvers/nesting/: convex.md  general.md
docs/book/src/api/src/rust/ige-core/solvers/obb/: solver.md
docs/book/src/api/theme/: custom.css
docs/book/src/dev-reference/: bindings.md  folder-layout.md  parameters.md
docs/book/src/getting-started/: installation.md
docs/book/src/performance/: benchmarks.md  index.md
docs/book/src/theory/: complexity.md  index.md  math-foundations.md
docs/book/theme/: head.hbs
gis/qgis/scripts/: axis_aligned_lir.py  oriented_lir.py
openevolve/: README.md  config.yaml  evaluator.py  run_ige_evolution.py
