[workspace]
members = [
    "crates/ige-core",
    "crates/ige-c",
    "crates/ige-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Wolren"]
repository = "https://github.com/wolren/ige"

[workspace.dependencies]
geo = "0.27"
geo-types = "0.7"
thiserror = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
wgpu = "0.20"
pollster = "0.2"
bytemuck = { version = "1.0", features = ["derive"] }
libc = "0.2"
ordered-float = "0.2"
rayon = "1.10"
anyhow = "1.0"
criterion = "0.5"
rustc-hash = "2"

