[workspace]
members = [
    "crates/ige-core",
    "crates/ige-c",
    "crates/ige-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Wolren"]
repository = "https://github.com/wolren/ige"

[workspace.dependencies]
geo = "0.27"
geo-types = "0.7"
geos = { version = "11.1.1", features = ["static", "v3_9_0"] }
thiserror = "1"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.0", features = ["derive"] }
libc = "0.2"
ordered-float = "0.2"
rayon = "1.10"
anyhow = "1.0"
criterion = "0.8.2"
rustc-hash = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true
debug = false
incremental = false

