[package]
name = "ige-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Inscribed Geometry Engine - largest inscribed rectangle algorithms with optional GPU"

[lib]
name = "ige_core"
path = "src/lib.rs"

[[bench]]
name = "lir_axis_aligned_bench"
harness = false

[[bench]]
name = "real_world"
harness = false

[[bench]]
name = "lir_approximate_oriented_bench"
harness = false

[[bench]]
name = "mic"
harness = false

[dependencies]
serde = { workspace = true, optional = true }
geo.workspace = true
geo-types.workspace = true
geos = { workspace = true, optional = true }
thiserror.workspace = true
ordered-float.workspace = true
rustc-hash.workspace = true
spade = "2"
rayon = { workspace = true }
anyhow = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[[example]]
name = "run_all"
path = "demos/run_all.rs"

[[example]]
name = "visualize"
path = "demos/visualize.rs"

[dev-dependencies]
criterion = { workspace = true }
approx = "0.5"
serde_json = "1.0"

[features]
default = ["cpu"]
serde = ["dep:serde", "geo/serde"]
cpu = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:anyhow"]
geos = ["dep:geos"]
