[package]
name = "ige-geo-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GIS file format parsing for IGE"

[dependencies]
geo-types.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"