[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ige"
version = "0.1.5"
description = "Inscribed Geometry Engine - Largest Inscribed Rectangle algorithms"
readme = "README.md"
authors = [{name = "IGE Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No Python dependencies needed - all in compiled extension

[tool.maturin]
features = ["pyo3/extension-module"]